# lambda-dlr-tf-c-api

./: CMakeLists.txt  README.md  main.cpp  packager
include/: dlr.h
